[package]
name = 'bitfield-rle'
version = "0.1.1"
license = 'MIT OR Apache-2.0'
repository = 'https://github.com/datrs/bitfield-rle'
documentation = 'https://docs.rs/bitfield-rle'
description = 'A run-length-encoder that compresses bitfields'
authors = ['Yoshua Wuyts <yoshuawuyts@gmail.com>']
readme = 'README.md'
edition = '2018'

[dependencies]
varinteger = '1.0.6'
failure = '0.1.6'
